[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Art/tiles.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TileMap.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="GDScript" id=2]

[sub_resource type="TileSet" id=3]
0/name = "corner"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "straight"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "3 split"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 16, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "cross"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "surface"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
script = SubResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
collision_layer = 0
collision_mask = 4
format = 1
tile_data = PoolIntArray( 0, 1073741825, 0, 1, -536870908, 0, 2, 536870916, 0, 3, 536870916, 0, 4, 536870916, 0, 5, 536870913, 0, 6, 536870916, 0, 7, 536870916, 0, 8, 536870916, 0, 9, 536870916, 0, 10, 536870916, 0, 11, 536870916, 0, 12, 536870916, 0, 65536, 1, 0, 65537, -536870908, 0, 65538, 0, 0, 65539, -1610612735, 0, 65540, -1610612735, 0, 65541, 1610612738, 0, 65542, 536870916, 0, 65543, 536870916, 0, 65544, 536870916, 0, 65545, 536870916, 0, 65546, 536870916, 0, 65547, 536870916, 0, 65548, 536870916, 0, 131072, 1, 0, 131073, 536870916, 0, 131074, 1, 0, 131075, 536870916, 0, 131076, 536870916, 0, 131077, 536870913, 0, 131078, 536870916, 0, 131079, 536870916, 0, 131080, 536870916, 0, 131081, 536870916, 0, 131082, 536870916, 0, 131083, 536870916, 0, 131084, 536870916, 0, 196608, 1073741824, 0, 196609, -2147483647, 0, 196610, -1073741822, 0, 196611, -2147483647, 0, 196612, -2147483647, 0, 196613, 536870915, 0, 196614, -536870911, 0, 196615, -536870911, 0, 196616, -536870911, 0, 196617, -536870911, 0, 196618, -536870911, 0, 196619, -536870911, 0, 196620, -536870911, 0, 262144, 536870916, 0, 262145, 536870916, 0, 262146, 536870916, 0, 262147, 536870916, 0, 262148, 536870916, 0, 262149, 536870913, 0, 262150, 536870916, 0, 262151, 536870916, 0, 262152, 536870916, 0, 262153, 536870916, 0, 262154, 536870916, 0, 262155, 536870916, 0, 262156, 536870916, 0, 327680, 536870916, 0, 327681, 536870916, 0, 327682, 536870916, 0, 327683, 536870916, 0, 327684, 536870916, 0, 327685, 536870913, 0, 327686, 536870916, 0, 327687, 536870916, 0, 327688, 536870916, 0, 327689, 536870916, 0, 327690, 536870916, 0, 327691, 536870916, 0, 327692, 536870916, 0, 393216, 536870916, 0, 393217, 536870916, 0, 393218, 536870916, 0, 393219, 536870916, 0, 393220, 536870916, 0, 393221, 536870913, 0, 393222, 536870916, 0, 393223, 536870916, 0, 393224, 536870916, 0, 393225, 536870916, 0, 393226, 536870916, 0, 393227, 536870916, 0, 393228, 536870916, 0 )
script = ExtResource( 3 )

[node name="TypeLable" type="Label" parent="."]
margin_top = 96.0
margin_right = 40.0
margin_bottom = 110.0

[node name="Enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( 112, 38 )
[connection signal="build_on_tilemap" from="TileMap" to="." method="_build_on_tilemap"]
[connection signal="died" from="Enemy" to="." method="_on_Enemy_died"]
